add region support for eu

--- a/LovePvP/appsettings.json
+++ b/LovePvP/appsettings.json
@@ -5,10 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Blizzard": {
-    "ClientId": "6a1e54cc02494b5f8d292b51df84d1b1",
-    "ClientSecret": "WIIqxRhAQtnELBmpa84hlXly13K3801S",
+  "BlizzardSettings": {
+    "ClientId": "CLIENT-ID",
+    "ClientSecret": "CLIENT-SECRET",
     "TokenUrl": "https://oauth.battle.net/token",
-    "ApiBaseUrl": "https://us.api.blizzard.com"
+    "ApiBaseUrls": {
+      "US": "https://us.api.blizzard.com",
+      "EU": "https://eu.api.blizzard.com"
+    }
   }
 }
